--- a/173504540918/index.html
+++ b/173504540918/index.html
@@ -242,7 +242,7 @@
             </div>
         </div>
         <div class="flex flex-col pt-4 text-sm gap-3 text-gray-600 a-h-xhx border-t border-gray-200 mt-5">
-            <a href="/17350353899/">上一篇：怎么看WPS的版本？</a>
+            <a href="/173504535317/">上一篇：WPS如何设置段落？</a>
         
           </div>
     </div>
@@ -254,12 +254,62 @@
             
             <div
                 class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
-                <a href="/17350353899/" class="flex flex-col mb-2 gap-4">
+                <a href="/173504535317/" class="flex flex-col mb-2 gap-4">
                     <div
-                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/17a1f2cc-36a3-40f8-8665-cac0073b6bb7-1.webp');">
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/f299d058-33d5-4e1f-85fd-7b15794796b8-17.webp');">
                     </div>
-                    <h3 class="text-lg font-medium">怎么看WPS的版本？</h3>
-                    <p class="text-gray-600">查看WPS Office版本的方法非常简单。您可以通过打开W</p>
+                    <h3 class="text-lg font-medium">WPS如何设置段落？</h3>
+                    <p class="text-gray-600">在WPS中设置段落可以通过多种方式进行调整，包括对齐方式、缩</p>
+                </a>
+            </div>
+            <div
+                class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
+                <a href="/173504533216/" class="flex flex-col mb-2 gap-4">
+                    <div
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/7bdd15b7-7980-477e-b63e-14918a02777c-15.webp');">
+                    </div>
+                    <h3 class="text-lg font-medium">WPS有什么用？</h3>
+                    <p class="text-gray-600">WPS Office是一款功能强大的办公软件套件，提供文档处</p>
+                </a>
+            </div>
+            <div
+                class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
+                <a href="/173504528815/" class="flex flex-col mb-2 gap-4">
+                    <div
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/edfe66d9-874c-4038-b5e4-3e0b5441db06-13.webp');">
+                    </div>
+                    <h3 class="text-lg font-medium">如何删除WPS图片？</h3>
+                    <p class="text-gray-600">在WPS Office中删除图片非常简单。首先，打开文档并点</p>
+                </a>
+            </div>
+            <div
+                class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
+                <a href="/173504526814/" class="flex flex-col mb-2 gap-4">
+                    <div
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/858182ce-3489-4237-b8be-e46fc1772616-11.webp');">
+                    </div>
+                    <h3 class="text-lg font-medium">WPS怎么选择语言？</h3>
+                    <p class="text-gray-600">在WPS Office中，选择语言可以通过设置菜单完成，具体</p>
+                </a>
+            </div>
+            <div
+                class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
+                <a href="/173503557913/" class="flex flex-col mb-2 gap-4">
+                    <div
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/8ef71116-13d1-454e-87ae-d556090d7f29-9.webp');">
+                    </div>
+                    <h3 class="text-lg font-medium">WPS是什么文档？</h3>
+                    <p class="text-gray-600">WPS文档是由金山办公软件开发的WPS Office套件中生</p>
+                </a>
+            </div>
+            <div
+                class="bg-gray-100 rounded-lg p-0 md:p-4 border border-transparent hover:border-gray-300 hover:rounded-lg hover:bg-white hover:shadow-lg">
+                <a href="/173503549712/" class="flex flex-col mb-2 gap-4">
+                    <div
+                        class="bg-cover bg-center h-[200px] w-full" style="background-image: url('/media/files/20241224/8f046a5b-f6f2-439b-8bbb-b27c2ba71679-7.webp');">
+                    </div>
+                    <h3 class="text-lg font-medium">WPS如何写公式？</h3>
+                    <p class="text-gray-600">WPS Office提供了多种方法来输入和编辑公式，无论是在</p>
                 </a>
             </div>
         </div>
